file changes for spring boot 4 version