@@ -87,7 +87,7 @@ public class AssetImportMappingServiceImpl implements AssetImportMappingService 
                 if (fmOpt.isPresent()) {
                     fyMonths.add(fmOpt.get());
                 } else {
-                    missingEntries.add(String.format("%s-%d", Month.of(my.month).name(), my.year));
+                    missingEntries.add("%s-%d".formatted(Month.of(my.month).name(), my.year));
                 }
             }
 
@@ -233,7 +233,7 @@ public class AssetImportMappingServiceImpl implements AssetImportMappingService 
                 if (fmOpt.isPresent()) {
                     fyMonths.add(fmOpt.get());
                 } else {
-                    missingEntries.add(String.format("%s-%d", Month.of(my.month).name(), my.year));
+                    missingEntries.add("%s-%d".formatted(Month.of(my.month).name(), my.year));
                 }
             }
 
