@@ -29,6 +29,7 @@ import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.hibernate.Session;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.sql.init.dependency.DependsOnDatabaseInitialization;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
@@ -63,6 +64,7 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.persistence.Query;
 
+@DependsOnDatabaseInitialization
 @Service
 public class PackagingConsumablesServiceImpl implements PackagingConsumablesService{
 	
@@ -437,7 +439,7 @@ public class PackagingConsumablesServiceImpl implements PackagingConsumablesServ
 				UUID normParameterFKId = UUID.fromString(configurationDTO.getNormParameterFKId());
 
 				Optional<NormParameters> optionNormParameters = normParametersRepository.findById(normParameterFKId);
-				if (!optionNormParameters.isPresent()) {
+				if (optionNormParameters.isEmpty()) {
 					configurationDTO.setSaveStatus("Failed");
 					configurationDTO.setErrDescription("Norm Paramter not found");
 					failedList.add(configurationDTO);
@@ -525,7 +527,7 @@ public class PackagingConsumablesServiceImpl implements PackagingConsumablesServ
 		boolean attributeChanged = newValue != null 
 		    && !newValue.equalsIgnoreCase(existingValue);
 
-		if(newValue!=null && newValue.equalsIgnoreCase("0.0") && !existingRecord.isPresent()) {
+		if(newValue!=null && newValue.equalsIgnoreCase("0.0") && existingRecord.isEmpty()) {
 			return;
 		}
 		if (remarksChanged) {
@@ -632,10 +634,10 @@ public class PackagingConsumablesServiceImpl implements PackagingConsumablesServ
 	            for (int col = 0; col < rowData.size(); col++) {
 	                Cell cell = row.createCell(col);
 	                Object value = rowData.get(col);
-	                if (value instanceof Number) {
-	                    cell.setCellValue(((Number) value).doubleValue());
-	                } else if (value instanceof Boolean) {
-	                    cell.setCellValue((Boolean) value);
+	                if (value instanceof Number number) {
+	                    cell.setCellValue(number.doubleValue());
+	                } else if (value instanceof Boolean boolean1) {
+	                    cell.setCellValue(boolean1);
 	                } else if (value != null) {
 	                    cell.setCellValue(value.toString());
 	                } else {
@@ -661,7 +663,7 @@ public class PackagingConsumablesServiceImpl implements PackagingConsumablesServ
 	    int endYearSuffix = Integer.parseInt(parts[1]);
 	    int nextStartYear = startYear - 1;
 	    int nextEndYearSuffix = endYearSuffix - 1;
-	    return nextStartYear + "-" + String.format("%02d", nextEndYearSuffix % 100);
+	    return nextStartYear + "-" + "%02d".formatted(nextEndYearSuffix % 100);
 	}
 
 	@Override
